# log_watcher

./: .gitignore  log_watcher.py  pyproject.toml  requirements.txt
logwatcher/: log_watcher.py
